--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -104,29 +104,31 @@
         <field name="model">hospital.patient</field>
         <field name="arch" type="xml">
             <search>
-                <field name="name" filter_domain="['|', '|', ('name', 'ilike', self), ('age', 'ilike', self), ('gender', 'ilike', self)]" string="Patient Name"></field>
+                <!-- Searchable Fields -->
+                <field name="name" filter_domain="['|', '|', ('name', 'ilike', self), ('age', '>', 30), ('gender', 'ilike', self)]" string="Patient Name"></field>
                 <field name="age"></field>
                 <field name="gender"></field>
-
-                <!-- <button name="%(hospital.action_hospital_patient)d" string="Action Button" type="action" class="oe_highlight"/> -->
-
-
-                <!-- own -->
                 <field name="bill"></field>
                 <field name="paid"></field>
-                <!-- <field name="image"></field> -->
-                <field name="appointment_time"></field>
+                <field name="appointment_time" optional='hide'></field>
                 <field name="booking_time"></field>
 
+                <!-- Filter -->
                 <filter name="filter_male" string="Male" domain="[('gender', '=', 'male')]"></filter>
                 <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]"></filter>
                 <separator></separator>
                 <filter name="filter_kids" string="Kids" domain="[('age', '&lt;=', '5')]"></filter>
                 <separator></separator> 
                 <filter name="filter_archived" string="Archived" domain="[('active', '=', False)]"></filter>
+                
+                <!-- Group By -->
                 <group expand="0" string="Group By">
                     <filter string="Gender" name="group_by_gender" context="{'group_by' : 'gender'}"></filter>
                 </group>
+
+
+
+
                 <searchpanel>
                     <field name="gender" icon="fa-users" select="multi" enable_counters="1"/>
                 </searchpanel>
@@ -141,7 +143,7 @@
         <field name="res_model">hospital.patient</field>
         <!-- <field name="view_mode">tree,kanban,form,calendar,pivot,graph,activity</field> -->
         <field name="view_mode">tree,form</field>
-        <field name="context">{}</field>
+        <field name="context">{'search_default_filter_male':1,'group_by' : 'gender'}</field>
         <!-- <field name="context">{'default_email' : 'suprodipsorkar@gmail.com'}</field> -->
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
